# vector-game-github-template

./: Cargo.toml  README.md  gl.js  index.html  replace_me.wasm
.github/workflows/: rust.yml
src/: debug.rs  fxaa.glsl  main.rs  object.rs  physics.rs  render.rs  svg.rs  text.rs  unit.rs
