[package]
name = "replace_me"
version = "0.1.0"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "AGPL-3.0-or-later"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tversteeg/replace_me"
documentation = "https://docs.rs/replace_me"
description = ""
keywords = []
categories = []

[badges]
is-it-maintained-issue-resolution = { repository = "tversteeg/replace_me" }
is-it-maintained-open-issues = { repository = "tversteeg/replace_me" }

[dependencies]
anyhow = "1.0.28"
generational-arena = "0.2.7"
hibitset = "0.6.3"
legion = { version = "0.2.1", default-features = false }
lyon = { version = "0.15.8", features = ["extra"] }
miniquad = { git = "https://github.com/not-fl3/miniquad.git", branch = "render_pass_delete" }
usvg = { version = "0.9.0", default-features = false }

[dependencies.nphysics2d]
version = "0.15.0"
default-features = false
features = ["dim2"]

[dependencies.ncollide2d]
version = "0.23.0"
default-features = false
features = ["dim2"]

[dependencies.nalgebra]
version = "0.21.0"
default-features = false
